# YakoPlayer

./: .gitignore  Cargo.toml  README.md
ffi/: YakoPlayer.cs  yako_player.h
src/: lib.rs  main.rs  player.rs
src/audio/: device.rs  mod.rs  sample.rs  source.rs  volume.rs
src/info/: media.rs
src/metadata/: ffmpeg.rs
