[package]
name = "yako-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "0.4.14"
cpal = "0.13.5"
ffmpeg-next = "5.0.3"
ffmpeg-sys-next = "5.0.1"
ringbuf = "0.2.8"
# lofty = "0.6.0"
# rayon = "1.5.1"
# num_cpus = "1.13.1"
snafu = "0.7.0"
libc = "0.2.122"
ffi_helpers = "0.3.0"

[target.'cfg(windows)'.dependencies]
widestring = "0.5.1"

[lib]
crate-type = ["cdylib"]